src/test/resources/projects/negative/enum-value-of/src/main/java/com/acme/Color.java
package com.acme;

public enum Color {
    RED,
    BLUE
}
